// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allocations 1`] = `
Object {
  "amount": "10079809779553770",
  "coins": Array [
    Object {
      "amount": "27221113.158613157",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": 27.221113158613157,
      "symbol": "ATOM",
      "value": 997.109375,
    },
    Object {
      "amount": "241430841.40435836",
      "denom": "ibc/EA3E1640F9B1532AB129A571203A0B9F789A7F14BB66E350DCBFA18E1A1931F0",
      "displayAmount": 241.43084140435835,
      "symbol": "CMDX",
      "value": 997.109375,
    },
  ],
  "denom": "gamm/pool/600",
  "displayAmount": -1,
  "name": "ATOM/CMDX",
  "value": 1994.21875,
}
`;

exports[`canonicalizeCoinWeights 3 weights 1`] = `
Array [
  Object {
    "allocation": 0.29411764705882354,
    "denom": "gamm/pool/606",
    "name": "ATOM/HUAHUA",
    "poolId": "606",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.11764705882352941,
    "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
    "name": "LUNA",
    "symbol": "LUNA",
    "type": "coin",
    "value": undefined,
    "weight": 2,
  },
  Object {
    "allocation": 0.5882352941176471,
    "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
    "name": "UST",
    "symbol": "UST",
    "type": "coin",
    "value": undefined,
    "weight": 10,
  },
]
`;

exports[`canonicalizeCoinWeights many weights 1`] = `
Array [
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/3",
    "name": "AKT/OSMO",
    "poolId": "3",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/1",
    "name": "ATOM/OSMO",
    "poolId": "1",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/600",
    "name": "ATOM/CMDX",
    "poolId": "600",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.15625,
    "denom": "gamm/pool/606",
    "name": "ATOM/HUAHUA",
    "poolId": "606",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.0625,
    "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
    "name": "LUNA",
    "symbol": "LUNA",
    "type": "coin",
    "value": undefined,
    "weight": 2,
  },
  Object {
    "allocation": 0.3125,
    "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
    "name": "UST",
    "symbol": "UST",
    "type": "coin",
    "value": undefined,
    "weight": 10,
  },
]
`;

exports[`canonicalizeCoinWeights pools only 1`] = `
Array [
  Object {
    "allocation": 0.3333333333333333,
    "denom": "gamm/pool/3",
    "name": "AKT/OSMO",
    "poolId": "3",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.3333333333333333,
    "denom": "gamm/pool/1",
    "name": "ATOM/OSMO",
    "poolId": "1",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
  Object {
    "allocation": 0.3333333333333333,
    "denom": "gamm/pool/600",
    "name": "ATOM/CMDX",
    "poolId": "600",
    "type": "pool",
    "value": undefined,
    "weight": 5,
  },
]
`;

exports[`pool allocations determines pool allocations 1`] = `
Object {
  "coins": Array [
    Object {
      "amount": "11575787.258743288",
      "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
      "displayAmount": 11.575787258743288,
      "symbol": "LUNA",
      "value": 797.6875,
    },
    Object {
      "amount": "3988437500",
      "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
      "displayAmount": 3988.4375,
      "symbol": "UST",
      "value": 3988.4375,
    },
  ],
  "pools": Array [
    Object {
      "amount": "1.3816161769941073e+22",
      "coins": Array [
        Object {
          "amount": "550889157.4585636",
          "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
          "displayAmount": 550.8891574585635,
          "symbol": "AKT",
          "value": 997.109375,
        },
        Object {
          "amount": "109572458.79120879",
          "denom": "uosmo",
          "displayAmount": 109.57245879120879,
          "symbol": "OSMO",
          "value": 997.109375,
        },
      ],
      "denom": "gamm/pool/3",
      "displayAmount": -1,
      "name": "AKT/OSMO",
      "value": 1994.21875,
    },
    Object {
      "amount": "1.4737155574910498e+21",
      "coins": Array [
        Object {
          "amount": "27221113.158613157",
          "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
          "displayAmount": 27.221113158613157,
          "symbol": "ATOM",
          "value": 997.109375,
        },
        Object {
          "amount": "109572458.79120879",
          "denom": "uosmo",
          "displayAmount": 109.57245879120879,
          "symbol": "OSMO",
          "value": 997.109375,
        },
      ],
      "denom": "gamm/pool/1",
      "displayAmount": -1,
      "name": "ATOM/OSMO",
      "value": 1994.21875,
    },
    Object {
      "amount": "10079809779553770",
      "coins": Array [
        Object {
          "amount": "27221113.158613157",
          "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
          "displayAmount": 27.221113158613157,
          "symbol": "ATOM",
          "value": 997.109375,
        },
        Object {
          "amount": "241430841.40435836",
          "denom": "ibc/EA3E1640F9B1532AB129A571203A0B9F789A7F14BB66E350DCBFA18E1A1931F0",
          "displayAmount": 241.43084140435835,
          "symbol": "CMDX",
          "value": 997.109375,
        },
      ],
      "denom": "gamm/pool/600",
      "displayAmount": -1,
      "name": "ATOM/CMDX",
      "value": 1994.21875,
    },
    Object {
      "amount": "1.2896039937450998e+23",
      "coins": Array [
        Object {
          "amount": "27221113.158613157",
          "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
          "displayAmount": 27.221113158613157,
          "symbol": "ATOM",
          "value": 997.109375,
        },
        Object {
          "amount": "234516853020.86664",
          "denom": "ibc/B9E0A1A524E98BB407D3CED8720EFEFD186002F90C1B1B7964811DD0CCC12228",
          "displayAmount": 234516.85302086663,
          "symbol": "HUAHUA",
          "value": 997.109375,
        },
      ],
      "denom": "gamm/pool/606",
      "displayAmount": -1,
      "name": "ATOM/HUAHUA",
      "value": 1994.21875,
    },
  ],
  "weights": Array [
    Object {
      "allocation": 0.15625,
      "denom": "gamm/pool/3",
      "name": "AKT/OSMO",
      "poolId": "3",
      "type": "pool",
      "value": 1994.21875,
      "weight": 5,
    },
    Object {
      "allocation": 0.15625,
      "denom": "gamm/pool/1",
      "name": "ATOM/OSMO",
      "poolId": "1",
      "type": "pool",
      "value": 1994.21875,
      "weight": 5,
    },
    Object {
      "allocation": 0.15625,
      "denom": "gamm/pool/600",
      "name": "ATOM/CMDX",
      "poolId": "600",
      "type": "pool",
      "value": 1994.21875,
      "weight": 5,
    },
    Object {
      "allocation": 0.15625,
      "denom": "gamm/pool/606",
      "name": "ATOM/HUAHUA",
      "poolId": "606",
      "type": "pool",
      "value": 1994.21875,
      "weight": 5,
    },
    Object {
      "allocation": 0.0625,
      "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
      "name": "LUNA",
      "symbol": "LUNA",
      "type": "coin",
      "value": 797.6875,
      "weight": 2,
    },
    Object {
      "allocation": 0.3125,
      "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
      "name": "UST",
      "symbol": "UST",
      "type": "coin",
      "value": 3988.4375,
      "weight": 10,
    },
  ],
}
`;

exports[`pool allocations determines pool allocations 2`] = `
Array [
  Object {
    "beliefValue": 797.6875,
    "buy": Object {
      "amount": "11575787.258743288",
      "denom": "ibc/0EF15DF2F02480ADE0BB6E85D9EBB5DAEA2836D3860E9F97F9AADE4F57A31AA0",
      "displayAmount": 11.575787258743288,
      "symbol": "LUNA",
      "value": 797.6875,
    },
    "sell": Object {
      "amount": "21776890.526890527",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": 21.776890526890526,
      "symbol": "ATOM",
      "value": 797.6875,
    },
  },
  Object {
    "beliefValue": 2865.3125000000005,
    "buy": Object {
      "amount": "2865312500.0000005",
      "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
      "displayAmount": 2865.3125000000005,
      "symbol": "UST",
      "value": 2865.3125000000005,
    },
    "sell": Object {
      "amount": "78223109.47310947",
      "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
      "displayAmount": 78.22310947310947,
      "symbol": "ATOM",
      "value": 2865.3125000000005,
    },
  },
  Object {
    "beliefValue": 1123.1249999999995,
    "buy": Object {
      "amount": "1123124999.9999995",
      "denom": "ibc/BE1BB42D4BE3C30D50B68D7C41DB4DFCE9678E8EF8C539F6E6A9345048894FCC",
      "displayAmount": 1123.1249999999995,
      "symbol": "UST",
      "value": 1123.1249999999995,
    },
    "sell": Object {
      "amount": "123420329.67032962",
      "denom": "uosmo",
      "displayAmount": 123.42032967032962,
      "symbol": "OSMO",
      "value": 1123.1249999999995,
    },
  },
]
`;

exports[`pool allocations pool trades 1`] = `
Object {
  "name": "AKT/OSMO",
  "trades": Array [
    Object {
      "beliefValue": "997.109374999999999979",
      "buy": Object {
        "amount": "550889157.4585635359000000",
        "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
        "displayAmount": "550.889157458563535900",
        "symbol": "AKT",
        "value": "997.109374999999999979",
      },
      "sell": Object {
        "amount": "27221113.1586131586130000",
        "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
        "displayAmount": "27.221113158613158613",
        "symbol": "ATOM",
        "value": "997.109374999999999979",
      },
    },
  ],
}
`;

exports[`pool allocations pool trades 2`] = `
Object {
  "name": "ATOM/OSMO",
  "trades": Array [],
}
`;

exports[`pool allocations pool trades 3`] = `
Object {
  "name": "ATOM/CMDX",
  "trades": Array [
    Object {
      "beliefValue": "997.109374999999999955",
      "buy": Object {
        "amount": "241430841.4043583535000000",
        "denom": "ibc/EA3E1640F9B1532AB129A571203A0B9F789A7F14BB66E350DCBFA18E1A1931F0",
        "displayAmount": "241.430841404358353500",
        "symbol": "CMDX",
        "value": "997.109374999999999955",
      },
      "sell": Object {
        "amount": "27221113.1586131586120000",
        "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
        "displayAmount": "27.221113158613158612",
        "symbol": "ATOM",
        "value": "997.109374999999999955",
      },
    },
  ],
}
`;

exports[`pool allocations pool trades 4`] = `
Object {
  "name": "ATOM/HUAHUA",
  "trades": Array [
    Object {
      "beliefValue": "997.109375000000000000",
      "buy": Object {
        "amount": "234516853020.8666528684590000",
        "denom": "ibc/B9E0A1A524E98BB407D3CED8720EFEFD186002F90C1B1B7964811DD0CCC12228",
        "displayAmount": "234516.853020866652868459",
        "symbol": "HUAHUA",
        "value": "997.109375000000000000",
      },
      "sell": Object {
        "amount": "27221113.1586131586130000",
        "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
        "displayAmount": "27.221113158613158613",
        "symbol": "ATOM",
        "value": "997.109375000000000000",
      },
    },
  ],
}
`;
